Small bugfixes with z-index and focus changing.

--- a/src/pages/field/field.scss
+++ b/src/pages/field/field.scss
@@ -55,7 +55,7 @@
   width: 100vw;
   height: 60vh;
   background-color: #FFFFFF;
-  z-index: 1000;
+  z-index: 9;
 }
 
 .hidden {
